# nfw

./: .editorconfig  .gitignore  .gitmodules  .markdownlint-cli2.jsonc  Cargo.toml  Directory.Build.props  LICENSE  Makefile  NFramework.Nfw.slnx  README.md  test_cliclack.rs
src/n-framework-nfw/core/n-framework-nfw-core-application/: Cargo.toml
src/n-framework-nfw/core/n-framework-nfw-core-application/src/: lib.rs
src/n-framework-nfw/core/n-framework-nfw-core-application/src/features/: mod.rs
src/n-framework-nfw/core/n-framework-nfw-core-application/src/features/cli/: exit_codes.rs  mod.rs
src/n-framework-nfw/core/n-framework-nfw-core-application/src/features/entity_generation/: mod.rs
src/n-framework-nfw/core/n-framework-nfw-core-application/src/features/generator_management/: constants.rs  mod.rs
src/n-framework-nfw/core/n-framework-nfw-core-application/src/features/template_management/: constants.rs
src/n-framework-nfw/core/n-framework-nfw-core-application/src/features/versioning/: version_provider.rs  version_resolver.rs  version_resolver.tests.rs
src/n-framework-nfw/core/n-framework-nfw-core-domain/: Cargo.toml
src/n-framework-nfw/core/n-framework-nfw-core-domain/src/features/: mod.rs
src/n-framework-nfw/core/n-framework-nfw-core-domain/src/features/generator_management/: generator_catalog.rs  generator_config.rs  generator_config.tests.rs  generator_descriptor.rs  generator_metadata.rs  generator_metadata.tests.rs  generator_parameters.rs  generator_parameters.tests.rs  generator_source.rs  mod.rs  qualified_generator_id.rs  qualified_generator_id.tests.rs  validation.rs  validation.tests.rs
src/n-framework-nfw/core/n-framework-nfw-core-domain/src/features/template_management/: mod.rs  qualified_template_id.rs  qualified_template_id.tests.rs  template_config.rs  template_config.tests.rs  template_metadata.rs  template_metadata.tests.rs  template_parameters.rs  template_parameters.tests.rs  validation.rs  validation.tests.rs
src/n-framework-nfw/core/n-framework-nfw-core-domain/src/features/versioning/: mod.rs  version.rs  version.tests.rs
src/n-framework-nfw/core/n-framework-nfw-core-domain/src/features/workspace_management/: workspace_blueprint.rs  workspace_blueprint.tests.rs
src/n-framework-nfw/infrastructure/n-framework-nfw-infrastructure-filesystem/: Cargo.toml
src/n-framework-nfw/infrastructure/n-framework-nfw-infrastructure-filesystem/src/features/: mod.rs
src/n-framework-nfw/infrastructure/n-framework-nfw-infrastructure-filesystem/src/features/generator_management/: generator_engine.rs  generator_engine.tests.rs  mod.rs
src/n-framework-nfw/infrastructure/n-framework-nfw-infrastructure-filesystem/src/features/template_management/: mod.rs  template_engine.rs  template_engine.tests.rs
src/n-framework-nfw/infrastructure/n-framework-nfw-infrastructure-git/: Cargo.toml
src/n-framework-nfw/infrastructure/n-framework-nfw-infrastructure-git/src/features/: mod.rs
src/n-framework-nfw/infrastructure/n-framework-nfw-infrastructure-versioning/: Cargo.toml
src/n-framework-nfw/infrastructure/n-framework-nfw-infrastructure-yaml/: Cargo.toml
src/n-framework-nfw/infrastructure/n-framework-nfw-infrastructure-yaml/src/: lib.rs
src/n-framework-nfw/infrastructure/n-framework-nfw-infrastructure-yaml/src/features/: mod.rs
src/n-framework-nfw/presentation/n-framework-nfw-cli/: Cargo.toml
src/n-framework-nfw/presentation/n-framework-nfw-cli/src/: cli_error.rs  lib.rs  main.rs  utils.rs
src/n-framework-nfw/presentation/n-framework-nfw-cli/src/commands/: mod.rs
src/n-framework-nfw/presentation/n-framework-nfw-cli/src/commands/add/: mod.rs  registration.rs  utils.rs
src/n-framework-nfw/presentation/n-framework-nfw-cli/src/runtime/: interactive_service_generator_prompt.rs  interactive_service_template_prompt.rs  mod.rs  nfw_cli_runtime.rs  nfw_cli_runtime.tests.rs
src/n-framework-nfw/presentation/n-framework-nfw-cli/src/startup/: cli_bootstrapper.rs  cli_service_collection_factory.rs  cli_service_types.rs  cli_validator.rs  mod.rs
src/nframework-nfw/core/nframework-nfw-application/: Cargo.toml
src/nframework-nfw/core/nframework-nfw-application/src/: lib.rs
src/nframework-nfw/core/nframework-nfw-application/src/features/: mod.rs
src/nframework-nfw/core/nframework-nfw-core-application/: Cargo.toml
src/nframework-nfw/core/nframework-nfw-core-application/src/: lib.rs
src/nframework-nfw/core/nframework-nfw-domain/: Cargo.toml
src/nframework-nfw/core/nframework-nfw-domain/src/: lib.rs
src/nframework-nfw/core/nframework-nfw-domain/src/features/: mod.rs
src/nframework-nfw/infrastructure/nframework-nfw-infrastructure-filesystem/: Cargo.toml
src/nframework-nfw/infrastructure/nframework-nfw-infrastructure-filesystem/src/: lib.rs
src/nframework-nfw/infrastructure/nframework-nfw-infrastructure-filesystem/src/features/: mod.rs
src/nframework-nfw/infrastructure/nframework-nfw-infrastructure-git/: Cargo.toml
src/nframework-nfw/infrastructure/nframework-nfw-infrastructure-git/src/: lib.rs
src/nframework-nfw/infrastructure/nframework-nfw-infrastructure-versioning/: Cargo.toml
src/nframework-nfw/infrastructure/nframework-nfw-infrastructure-versioning/src/: lib.rs
src/nframework-nfw/infrastructure/nframework-nfw-infrastructure-yaml/: Cargo.toml
src/nframework-nfw/infrastructure/nframework-nfw-infrastructure-yaml/src/features/: mod.rs
src/nframework-nfw/presentation/nframework-nfw-cli/: Cargo.toml
src/nframework-nfw/presentation/nframework-nfw-cli/src/: args.rs  main.rs
src/nframework-nfw/presentation/nframework-nfw-cli/src/adapters/: mod.rs  nfw_cli_adapter.rs
src/nframework-nfw/presentation/nframework-nfw-cli/src/commands/: mod.rs
src/nframework-nfw/presentation/nframework-nfw-cli/src/runtime/: interactive_prompt_service.rs  interactive_service_template_prompt.rs  mod.rs  nfw_cli_runtime.rs
src/nframework-nfw/presentation/nframework-nfw-cli/src/startup/: cli_bootstrapper.rs  cli_service_collection_factory.rs  cli_service_types.rs  cli_validator.rs  mod.rs
(+1004 files in other folders)
