[package]
name = "n-framework-nfw-core-application"
version = "0.1.0"
edition = "2024"

[dependencies]
n-framework-core-cli-abstractions = { path = "../../../../packages/n-framework-core-cli/src/n-framework-core-cli-abstractions" }
n-framework-nfw-core-domain = { path = "../n-framework-nfw-core-domain" }
n-framework-core-template-abstractions = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
regex = "1"
thiserror = "2"
n-framework-nfw-infrastructure-workspace-metadata = { path = "../../infrastructure/n-framework-nfw-infrastructure-workspace-metadata" }
serde_json = "1.0.149"
tracing = "0.1"

[dev-dependencies]
semver = "1"
serde_yaml = "0.9"
tempfile = "3"
n-framework-nfw-infrastructure-versioning = { path = "../../infrastructure/n-framework-nfw-infrastructure-versioning" }

