[package]
name = "n-framework-nfw-infrastructure-filesystem"
version = "0.1.0"
edition = "2024"

[dependencies]
n-framework-nfw-core-application = { path = "../../core/n-framework-nfw-core-application" }
n-framework-nfw-core-domain = { path = "../../core/n-framework-nfw-core-domain" }
n-framework-nfw-infrastructure-workspace-metadata = { path = "../n-framework-nfw-infrastructure-workspace-metadata" }
glob = "0.3"
regex = "1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
mustache = { workspace = true }
n-framework-core-template-abstractions = { workspace = true }
n-framework-core-template-tera = { workspace = true }

[[test]]
name = "nfw_configuration_loader_tests"
path = "../../../../tests/unit/n-framework-nfw/infrastructure/n-framework-nfw-infrastructure-filesystem/features/cli/configuration/nfw_configuration_loader_tests.rs"

[[test]]
name = "workspace_layout_test"
path = "../../../../tests/integration/n-framework-nfw/features/workspace_new/workspace_layout_test.rs"

[[test]]
name = "reproducible_generation_test"
path = "../../../../tests/integration/n-framework-nfw/features/workspace_new/reproducible_generation_test.rs"
