[package]
name = "n-framework-nfw-infrastructure-yaml"
version = "0.1.0"
edition = "2024"

[dependencies]
n-framework-nfw-core-application = { path = "../../core/n-framework-nfw-core-application" }
n-framework-nfw-infrastructure-workspace-metadata = { path = "../n-framework-nfw-infrastructure-workspace-metadata" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
