[package]
name = "n-framework-nfw-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "n-framework-nfw-cli"
path = "src/main.rs"

[lib]
name = "n_framework_nfw_cli"
path = "src/lib.rs"

[dependencies]
n-framework-core-cli-abstractions = { workspace = true }
n-framework-core-cli-clap = { workspace = true }
n-framework-core-cli-cliclack = { workspace = true }
n-framework-nfw-core-application = { path = "../../core/n-framework-nfw-core-application" }
n-framework-nfw-core-domain = { path = "../../core/n-framework-nfw-core-domain" }
n-framework-nfw-infrastructure-filesystem = { path = "../../infrastructure/n-framework-nfw-infrastructure-filesystem" }
n-framework-nfw-infrastructure-git = { path = "../../infrastructure/n-framework-nfw-infrastructure-git" }
n-framework-nfw-infrastructure-versioning = { path = "../../infrastructure/n-framework-nfw-infrastructure-versioning" }
n-framework-nfw-infrastructure-yaml = { path = "../../infrastructure/n-framework-nfw-infrastructure-yaml" }
serde_json = "1.0.149"
serde_yaml = "0.9"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[[test]]
name = "new_command_routing_tests"
path = "../../../../tests/integration/presentation/routing/new_command_routing.tests.rs"


[[test]]
name = "add_service_command_routing_tests"
path = "../../../../tests/integration/presentation/routing/add_service_command_routing.tests.rs"

[[test]]
name = "check_command_routing_tests"
path = "../../../../tests/integration/presentation/routing/check_command_routing.tests.rs"

[[test]]
name = "check_command_stdio_tests"
path = "../../../../tests/integration/presentation/routing/check_command_stdio.tests.rs"

[[test]]
name = "no_input_validation_test"
path = "../../../../tests/integration/n-framework-nfw/features/workspace_new/no_input_validation_test.rs"

[[test]]
name = "cli_routing_errors_test"
path = "../../../../tests/integration/n-framework-nfw/features/workspace_new/cli_routing_errors_test.rs"

[[test]]
name = "service_generation_layout_test"
path = "../../../../tests/integration/n-framework-nfw/features/service_add/service_generation_layout_test.rs"

[[test]]
name = "service_workspace_context_validation_test"
path = "../../../../tests/integration/n-framework-nfw/features/service_add/service_workspace_context_validation_test.rs"

[[test]]
name = "service_first_build_smoke_test"
path = "../../../../tests/integration/n-framework-nfw/features/service_add/service_first_build_smoke_test.rs"

[[test]]
name = "service_generation_cleanup_test"
path = "../../../../tests/integration/n-framework-nfw/features/service_add/service_generation_cleanup_test.rs"

[[test]]
name = "service_generation_path_safety_test"
path = "../../../../tests/integration/n-framework-nfw/features/service_add/service_generation_path_safety_test.rs"

[[test]]
name = "service_template_validation_test"
path = "../../../../tests/integration/n-framework-nfw/features/service_add/service_template_validation_test.rs"

[[test]]
name = "service_template_provenance_persistence_test"
path = "../../../../tests/integration/n-framework-nfw/features/service_add/service_template_provenance_persistence_test.rs"

[[test]]
name = "service_comment_preservation_test"
path = "../../../../tests/integration/n-framework-nfw/features/service_add/service_comment_preservation_test.rs"

[[test]]
name = "architecture_check_valid_workspace_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/valid_workspace_check_test.rs"

[[test]]
name = "architecture_check_forbidden_project_reference_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/forbidden_project_reference_test.rs"

[[test]]
name = "architecture_check_forbidden_namespace_usage_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/forbidden_namespace_usage_test.rs"

[[test]]
name = "architecture_check_forbidden_package_usage_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/forbidden_package_usage_test.rs"

[[test]]
name = "architecture_check_unreadable_artifact_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/unreadable_artifact_test.rs"

[[test]]
name = "architecture_check_deterministic_repeatability_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/deterministic_repeatability_test.rs"

[[test]]
name = "architecture_check_actionable_output_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/actionable_output_test.rs"

[[test]]
name = "architecture_check_multi_violation_reporting_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/multi_violation_reporting_test.rs"

[[test]]
name = "architecture_check_lint_failure_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/lint_failure_test.rs"

[[test]]
name = "architecture_check_service_lint_scope_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/service_lint_scope_test.rs"

[[test]]
name = "architecture_check_service_test_failure_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/service_test_failure_test.rs"

[[test]]
name = "architecture_check_polyglot_rust_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/polyglot_rust_check_test.rs"

[[test]]
name = "architecture_check_polyglot_go_test"
path = "../../../../tests/integration/n-framework-nfw/features/architecture_check/polyglot_go_check.tests.rs"

[[test]]
name = "artifact_smoke_test"
path = "../../../../tests/integration/n-framework-nfw/features/artifact/artifact_smoke_test.rs"

[[test]]
name = "mediator_add_test"
path = "../../../../tests/integration/n-framework-nfw/features/artifact/mediator_add_test.rs"
