[package]
name = "nframework-nfw-application"
version = "0.1.0"
edition = "2024"

[dependencies]
nframework-nfw-domain = { path = "../nframework-nfw-domain" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
semver = "1"
serde_yaml = "0.9"
nframework-nfw-infrastructure-versioning = { path = "../../infrastructure/nframework-nfw-infrastructure-versioning" }

[[test]]
name = "template_catalog_parser_tests"
path = "../../../../tests/unit/nframework-nfw/core/nframework-nfw-application/features/template_management/services/template_catalog_parser_tests.rs"

[[test]]
name = "template_catalog_source_resolver_tests"
path = "../../../../tests/unit/nframework-nfw/core/nframework-nfw-application/features/template_management/services/template_catalog_source_resolver_tests.rs"

[[test]]
name = "templates_service_tests"
path = "../../../../tests/unit/nframework-nfw/core/nframework-nfw-application/features/template_management/services/templates_service_tests.rs"

[[test]]
name = "source_management_tests"
path = "../../../../tests/unit/nframework-nfw/core/nframework-nfw-application/features/template_management/services/source_management_tests.rs"

[[test]]
name = "template_selection_service_tests"
path = "../../../../tests/unit/nframework-nfw/core/nframework-nfw-application/features/template_management/services/template_selection_service_tests.rs"

[[test]]
name = "version_resolver_tests"
path = "../../../../tests/unit/nframework-nfw/core/nframework-nfw-application/features/versioning/version_resolver_tests.rs"
