[package]
name = "nframework-nfw-infrastructure-filesystem"
version = "0.1.0"
edition = "2024"

[dependencies]
nframework-nfw-application = { path = "../../core/nframework-nfw-application" }
nframework-nfw-domain = { path = "../../core/nframework-nfw-domain" }
glob = "0.3"
regex = "1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[[test]]
name = "nfw_configuration_loader_tests"
path = "../../../../tests/unit/nframework-nfw/infrastructure/nframework-nfw-infrastructure-filesystem/features/cli/configuration/nfw_configuration_loader_tests.rs"

[[test]]
name = "workspace_layout_test"
path = "../../../../tests/integration/nframework-nfw/features/workspace_new/workspace_layout_test.rs"

[[test]]
name = "reproducible_generation_test"
path = "../../../../tests/integration/nframework-nfw/features/workspace_new/reproducible_generation_test.rs"
